[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advalidator"
version = "0.1.0"
description = "A simple Active Directory credential validator."
authors = [{ name = "Mary Amoah" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["ldap3"]

[tool.setuptools]
packages = ["advalidator"]

[project.scripts]
validate-creds = "advalidator.cli:main"
